fixed aos overflow

--- a/src/index.css
+++ b/src/index.css
@@ -9,17 +9,9 @@
   }
 }
 
-html {
-  @apply scroll-smooth;
-  overflow-x: hidden;
-}
-
-body {
-  @apply font-serif text-white bg-[#030a2d];
-}
-
-.bg-100 {
-  background-size: 100% 100%;
+html, body {
+  @apply scroll-smooth font-serif text-white bg-[#030a2d] overflow-x-hidden;
+  
 }
 
 .shine {
